--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,335 @@
-#Build directories 
+# Pebas Lang Project .gitignore
+
+# Build directories and CMake generated files
 build/
-out/
+build-*/
 cmake-build-*/
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+*.cmake
+!CMakeLists.txt
 
-#IDE file
-.idea/
-.vscode/
-*.swap
-*~
+# Compiled binaries and executables
+bel_pb
+bel_pb.exe
+*.exe
+*.out
+*.app
 
-#Compiled Object file
+# Object files and libraries
 *.o
 *.obj
-
-precompiled Headers 
-*.gch 
-*.pch 
-
-#Compiled Dynamic libraries 
-*.so
-*.dylib 
-*.dll 
-
-#Compiled Static libraries 
 *.a
-*.lib 
+*.lib
+*.so
+*.so.*
+*.dylib
+*.dll
 
-#executables 
-*.exe 
-*.out 
-*.app 
+# Debug and profiling files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+*.ilk
+*.map
+*.exp
 
-#cmake 
-CMakeCache.txt 
-CMakeFiles/
-CMakeScripts/
-Testing/
-Makefile
-cmake_install.cmake 
-install_manifest.txt 
-compile_commands.json 
-CTestTestfile.cmake 
+# Temporary and cache files
+*.tmp
+*.temp
+*.cache
+*.log
+*.swp
+*.swo
+*~
 
-#macOS specific 
-.DS_Store 
+# ===================================
+# C++ specific
+# ===================================
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# macOS specific
+# ===================================
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Development Tools
+# ===================================
+
+# Xcode
+*.xcodeproj/
+*.xcworkspace/
+xcuserdata/
+*.xccheckout
+*.moved-aside
+DerivedData/
+*.hmap
+*.ipa
+*.xcuserstate
+
+# CLion
+.idea/
+cmake-build-*/
+
+# Visual Studio Code
+.vscode/
+*.code-workspace
+
+# Neovim/Vim
+*.swp
+*.swo
+*~
+.netrwhist
+tags
+.tags
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Package Managers and Dependencies
+# ===================================
+
+# Conan
+conandata.yml
+conanfile.txt
+conaninfo.txt
+conanbuildinfo.*
+conan.lock
+
+# vcpkg
+vcpkg_installed/
+.vcpkg-root
+
+# Hunter
+_builds/
+_install/
+
+# Testing and Coverage
+# ===================================
+
+# Google Test
+gtest/
+googletest/
+
+# Coverage files
+*.gcov
+*.gcda
+*.gcno
+coverage/
+*.coverage
+htmlcov/
+
+# Valgrind
+*.memcheck
+*.helgrind
+*.drd
+*.massif
+
+# Documentation
+# ===================================
+
+# Doxygen
+docs/html/
+docs/latex/
+docs/xml/
+Doxyfile.bak
+
+# Sphinx
+docs/_build/
+docs/_static/
+docs/_templates/
+
+# Pebas Lang Specific
+# ===================================
+
+# Compiled Pebas programs
+*.pebas.o
+*.pebas.exe
+*.pebas.out
+
+# Intermediate representation files
+*.ir
+*.ll
+*.bc
+
+# Assembly output
+*.s
+*.asm
+
+# Pebas Lang cache and temporary files
+.pebas_cache/
+*.pebas.tmp
+
+# Generated parser/lexer files (if using generators)
+parser.tab.c
+parser.tab.h
+lex.yy.c
+parser.output
+
+# LLVM bitcode files
+*.bc
+*.ll
+
+# Backup and Archive files
+# ===================================
+
+*.bak
+*.backup
+*.old
+*.orig
+*.rej
+*.zip
+*.tar
+*.tar.gz
+*.tar.bz2
+*.tar.xz
+*.7z
+*.rar
+
+# Environment and Configuration
+# ===================================
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Local configuration
+config.local
+settings.local
+
+# Secrets and keys
+*.key
+*.pem
+*.p12
+*.pfx
+secrets/
+
+# Profiling and Performance
+# ===================================
+
+# Perf data
+perf.data*
+*.perf
+
+# Intel VTune
+*.amplxe
+r0*hs
+
+# Instruments
+*.trace
+
+# Miscellaneous
+# ===================================
+
+# Thumbnails
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# JetBrains IDEs
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Eclipse
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
+# NetBeans
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+# Custom Project Patterns
+# ===================================
+
+# Add any project-specific patterns here
+# Example:
+# my_custom_output/
+# *.custom_extension
+
